[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oh = { path = ".." }
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]